// src/mocks/departments.ts
import { Department } from '../types';

export const mockDepartments: Department[] = [
  { id: 'dep-1', name: 'Depo' },
  { id: 'dep-2', name: 'Bakım' },
  { id: 'dep-3', name: 'Elektrik' },
];